--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\SandhyaRamaiah\AppData\Local\Temp\testng-eclipse-1483824399\testng-customsuite.xml</span>
+                    <span>C:\Users\SandhyaRamaiah\AppData\Local\Temp\testng-eclipse-524562047\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,11 +102,15 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clearcode.testsuite.TestSuite1" hash-for-method="CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah14@gmail.com, Auto Test, Hi,
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clearcode.testsuite.TestSuite1" hash-for-method="CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah, Auto Test, Hi,
 
-This is test me...)">CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah14@gmail.com, Auto Test, Hi,
+This is test message.
 
-This is test me...)</a> <!-- method navigator-link -->
+Than...)">CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah, Auto Test, Hi,
+
+This is test message.
+
+Than...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -129,14 +133,18 @@ This is test me...)</a> <!-- method navigator-link -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah14@gmail.com, Auto Test, Hi,
+                  <a name="CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah, Auto Test, Hi,
 
-This is test me...)">
-                  </a> <!-- CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah14@gmail.com, Auto Test, Hi,
+This is test message.
 
-This is test me...) -->
+Than...)">
+                  </a> <!-- CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah, Auto Test, Hi,
+
+This is test message.
+
+Than...) -->
                   <span class="method-name">CreateStudent</span>
-                  <span class="parameters">(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah14@gmail.com, Auto Test, Hi,
+                  <span class="parameters">(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah, Auto Test, Hi,
 
 This is test message.
 
@@ -149,7 +157,7 @@ Sandhya)</span>
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SandhyaRamaiah\AppData\Local\Temp\testng-eclipse-1483824399\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SandhyaRamaiah\AppData\Local\Temp\testng-eclipse-524562047\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -202,7 +210,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'CreateStudent')
 data.setCell(0, 2, 'com.clearcode.testsuite.TestSuite1')
-data.setCell(0, 3, 4592);
+data.setCell(0, 3, 4725);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -219,14 +227,17 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah14@gmail.com, Auto Test, Hi,
+              <span class="reporter-method-name">CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah, Auto Test, Hi,
 
-This is test me...)</span>
+This is test message.
+
+Than...)</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">STEP4</span>
                 <span class="reporter-method-output">STEP5</span>
                 <span class="reporter-method-output">STEP6</span>
                 <span class="reporter-method-output">STEP7</span>
+                <span class="reporter-method-output">STEP8</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -251,17 +262,19 @@ This is test me...)</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">loadUrl</span>
-                <span class="method-start">8769 ms</span>
+                <span class="method-start">7801 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah14@gmail.com, Auto Test, Hi,
+                <span class="method-name">CreateStudent(Test Data 1, admin, admin@123, sandhya, sandhya.ramaiah, Auto Test, Hi,
 
-This is test me...)</span>
-                <span class="method-start">16364 ms</span>
+This is test message.
+
+Than...)</span>
+                <span class="method-start">14778 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">close</span>
-                <span class="method-start">20962 ms</span>
+                <span class="method-start">19509 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
