--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,15 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20,993</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,538</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.clearcode.testsuite.TestSuite1</td><td><a href="#m0">CreateStudent</a></td><td rowspan="1">1592996708101</td><td rowspan="1">4592</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.clearcode.testsuite.TestSuite1</td><td><a href="#m0">CreateStudent</a></td><td rowspan="1">1594099020649</td><td rowspan="1">4725</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.clearcode.testsuite.TestSuite1#CreateStudent</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th></tr><tr class="param stripe"><td>Test Data 1</td><td>admin</td><td>admin@123</td><td>sandhya</td><td>sandhya.ramaiah14@gmail.com</td><td>Auto Test</td><td>Hi,
+<h2>Default test</h2><h3 id="m0">com.clearcode.testsuite.TestSuite1#CreateStudent</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th></tr><tr class="param stripe"><td>Test Data 1</td><td>admin</td><td>admin@123</td><td>sandhya</td><td>sandhya.ramaiah</td><td>Auto Test</td><td>Hi,
 
 This is test message.
 
 Thanks,
-Sandhya</td></tr><tr><th colspan="7">Messages</th></tr><tr><td colspan="7"><div class="messages">STEP4<br/>STEP5<br/>STEP6<br/>STEP7</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+Sandhya</td></tr><tr><th colspan="7">Messages</th></tr><tr><td colspan="7"><div class="messages">STEP4<br/>STEP5<br/>STEP6<br/>STEP7<br/>STEP8</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
